# flowtracks_examples

./: .gitignore  LICENSE  README.md  build.py  convert_ipynb_to_marimo.sh  demo.sh  devbox.json  gallery.py  myptv_visualization.ipynb  plot_frames.ipynb  plotly_3d_trajectories.ipynb  plotting_2d_trajectories_using_openptv_postptv.ipynb  plotting_trajectories_using_postptv.ipynb  postptv_EX3915.ipynb  pyproject.toml  read_alex_ruiz_data-h5py.ipynb  requirements.txt  test.h5  test_of_iter_trajectories_ptv_is.ipynb  test_plot_pdf_subplots.md
.github/scripts/: build.py
jupyter_notebooks/: Plotting_trajectories_2D.ipynb  joint_pdf.ipynb  pair_analysis_example.ipynb  plot_frames.ipynb  read_alex_ruiz_data.ipynb  test_plot_pdf_subplots.ipynb
marimo_notebooks/: _animate_trajectories.py  gallery.py  joint_pdf.py  myptv_visualization.py  pair_analysis_example.py  plot_frames.py  plotly_3d_trajectories.py  plotly_visualize_trajectories_nb.py  plotting_2d_trajectories_using_openptv_postptv.py  read_alex_ruiz_data-h5py.py  read_alex_ruiz_data.py
notebooks/: animate_trajectories.py  flowtracks_load_data_to_hdf_and_plot3d.py  joint_pdf.py  myptv_visualization.py  pair_analysis_example.py  plot_frames.py  plotly_3d_trajectories.py  plotly_visualize_trajectories_nb.py  plotting_2d_trajectories_using_openptv_postptv.py  plotting_trajectories_using_postptv.py  postptv_EX3915.py  read_alex_ruiz_data-h5py.py  read_alex_ruiz_data.py  test_plot_pdf_subplots.py
templates/: README.md  index.html.j2  tailwind.html.j2
test_h5/: traj_GT.h5  traj_RC.h5
test_mat/: traj_GT.mat  traj_RC.mat
(+2 files in other folders)
